--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ nav a:hover {
     flex-direction: row;
     justify-content: space-between;
     min-height: 350px;
-    width: 1500px;
+    max-width: 1500px;
     margin: 0 auto;
     align-self: center;
     margin-bottom: 40px;
