--- a/styles.css
+++ b/styles.css
@@ -79,12 +79,12 @@ nav ul {
 }
 
 nav li {
-    margin: 0 5px;
+    margin: 0;
 }
 
 nav a {
     display: block;
-    padding: 5px 15px;
+    padding: 5px 10px;
     border-radius: 30px;
     font-weight: 500;
     font-size: 14px;
@@ -384,8 +384,9 @@ footer a {
         padding: 0 20px 20px 20px;
     }
     .hero h1{
-        font-size: 32px;
+        font-size: 25px;
         letter-spacing: -1px;
+        max-width: 300px !important;
     }
     #home .container-wide{
         justify-content: start;
@@ -406,6 +407,10 @@ footer a {
     }
     .back-gradient {
         background: none;
+    }
+
+    .main .right p {
+        font-size: 13px;
     }
 
 }
