--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ nav a:hover {
     background-image: url(images/logo.jpg);
     background-color:#000;
     background-size: contain;
-    background-position: center bottom;
+    background-position: center;
     background-repeat: no-repeat;
     border-radius: 25px;
     display: flex;
@@ -411,11 +411,9 @@ footer a {
 
     .main .right p {
         font-size: 13px;
-		overflow: hidden;
- 		display: -webkit-box;
-  		-webkit-box-orient: vertical;
-  		-webkit-line-clamp: 3; /* Limits the text to 3 lines */
-  		text-overflow: ellipsis;
+    }
+    #home .container-wide {
+        background-position: center bottom;
     }
 
 }
