--- a/styles.css
+++ b/styles.css
@@ -424,6 +424,10 @@ footer a {
         font-size: 22px;
         letter-spacing: -1px;
     }
+    .container.trust {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
 }
 
