--- a/styles.css
+++ b/styles.css
@@ -447,7 +447,7 @@ footer a {
     line-height: normal;
 }
 #about-me .right, #about-me .left{
-    width: 100%;
+    width: 100%!important;
 }
 
 }
