--- a/styles.css
+++ b/styles.css
@@ -578,6 +578,7 @@ By Alessandro Maculotti
     flex-direction: column;
     align-items: center;
     gap: 15px;
+    text-align: center;
 }
 .resource-box img {
     width: 75px;
