--- a/styles.css
+++ b/styles.css
@@ -683,3 +683,6 @@ section.hero.contact-me .container {
     justify-content: center;
     align-items: center;
 }
+.recieved {
+    width: 200px;
+}
