--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ input[type=url],
 textarea,
 select {
     font-size: 16px;
+	transition: ease 0.3s;
 }
 input[type=text]:focus-visible, textarea:focus-visible,input[type=email]:focus-visible{
     border-color: #010101 !important;
