--- a/styles.css
+++ b/styles.css
@@ -433,6 +433,17 @@ footer a {
     }
     .back-gradient {
         background: none;
+        height: 100%;
+    }
+    #home .main {
+        height: 100%;
+    }
+    #home .inner-container.right {
+        height: 100%;
+        justify-content: start;
+    }
+    #home .main .right a {
+        margin-top: auto !important;
     }
 
     .main .right p {
