--- a/styles.css
+++ b/styles.css
@@ -441,6 +441,7 @@ footer a {
     #home .inner-container.right {
         height: 100%;
         justify-content: start;
+        padding-bottom: 20px;
     }
     #home .main .right a {
         margin-top: auto !important;
