--- a/styles.css
+++ b/styles.css
@@ -435,6 +435,7 @@ footer a {
         background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 10%);
         height: 100%;
     }
+	/*
     #home .main {
         height: 100%;
     }
@@ -446,7 +447,7 @@ footer a {
     #home .main .right a {
         margin-top: auto !important;
     }
-
+     */
     .main .right p {
         font-size: 13px;
     }
