--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,13 @@ nav a:hover {
 .book-a-call a{
     color:#fff;
 }
-
+.btn.btn-dark.book-a-call {
+    margin-top: 0;
+    border: none;
+}
+.btn.btn-dark.book-a-call:hover {
+    color:#010101;
+}
 .book-a-call-mobile {
     background-color: #010101;
     border-radius: 50%;
@@ -191,9 +197,18 @@ nav a:hover {
     height: 40px;
     display:none;
 }
+.book-a-call-mobile {
+    background-color: #f3c84d;
+    text-decoration: none;
+    color: #010101;
+    box-shadow: 0px 2px 2px rgba(3, 7, 18, 0.02), 0px 8px 8px rgba(3, 7, 18, 0.03), 0px 18px 19px rgba(3, 7, 18, 0.05), 0px 32px 33px rgba(3, 7, 18, 0.06), 0px 50px 52px rgba(3, 7, 18, 0.08);
+}
 .book-a-call-mobile img {
     filter: invert(1);
     width: 18px;
+}
+.book-a-call-mobile:hover img {
+    filter: none;
 }
 .section {
     padding: 80px 0;
